--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,6 +5,8 @@ excluded:
 # 無効とするルール
 disabled_rules:
 - multiple_closures_with_trailing_closure
+- trailing_comma
+- opening_brace
 
 # デフォで無効とされたルールを有効とする
 opt_in_rules:
@@ -14,3 +16,4 @@ opt_in_rules:
 line_length: 450 # 1行あたりの文字数制限を450に変更
 identifier_name: # 変数名が1文字以上なら許可に変更
   min_length: 1
+
